@@ -35,6 +35,8 @@ namespace Mono.Cecil {
 		None				= 0x0000,
 		In					= 0x0001,	// Param is [In]
 		Out					= 0x0002,	// Param is [Out]
+		Lcid				= 0x0004,
+		Retval				= 0x0008,
 		Optional			= 0x0010,	// Param is optional
 		HasDefault			= 0x1000,	// Param has default value
 		HasFieldMarshal		= 0x2000,	// Param has field marshal
