@@ -1,3 +1,8 @@
+2008-11-14  Jb Evain  <jbevain@novell.com>
+
+	* Mono.Cecil/ParameterAttributes.cs: add Retval and Lcid.
+	* Mono.Cecil/ParameterDefinition.cs: add Is* property accordingly.
+
 2008-11-12  Jb Evain  <jbevain@novell.com>
 
 	* Mono.Cecil.Signatures/SignatureReader.cs: properly construct
